include_ver_2_beta_2/freetype.h

  
  typedef int  FT_Int;
  typedef unsigned int  FT_UInt;
  typedef signed long  FT_F26Dot6;
  typedef int  FT_Error;