lib/src/generated_bindings.dart


  /// @function:
  /// FT_Attach_Stream
  ///
  /// @description:
  /// 'Attach' data to a face object.  Normally, this is used to read
  /// additional information for the face object.  For example, you can
  /// attach an AFM file that comes with a Type~1 font to get the kerning
  /// values and other metrics.
  ///
  /// @inout:
  /// face ::
  /// The target face object.
  ///
  /// @input:
  /// parameters ::
  /// A pointer to @FT_Open_Args that must be filled by the caller.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// The meaning of the 'attach' (i.e., what really happens when the new
  /// file is read) is not fixed by FreeType itself.  It really depends on
  /// the font format (and thus the font driver).
  ///
  /// Client applications are expected to know what they are doing when
  /// invoking this function.  Most drivers simply do not implement file or
  /// stream attachments.
  int FT_Attach_Stream(
    FT_Face face,
    ffi.Pointer<FT_Open_Args> parameters,
  ) {
    return _FT_Attach_Stream(
      face,
      parameters,
    );
  }

  late final _FT_Attach_StreamPtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(
              FT_Face, ffi.Pointer<FT_Open_Args>)>>('FT_Attach_Stream');
  late final _FT_Attach_Stream = _FT_Attach_StreamPtr.asFunction<
      int Function(FT_Face, ffi.Pointer<FT_Open_Args>)>();

  /// @function:
  /// FT_Reference_Face
  ///
  /// @description:
  /// A counter gets initialized to~1 at the time an @FT_Face structure is
  /// created.  This function increments the counter.  @FT_Done_Face then
  /// only destroys a face if the counter is~1, otherwise it simply
  /// decrements the counter.
  ///
  /// This function helps in managing life-cycles of structures that
  /// reference @FT_Face objects.
  ///
  /// @input:
  /// face ::
  /// A handle to a target face object.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @since:
  /// 2.4.2
  int FT_Reference_Face(
    FT_Face face,
  ) {
    return _FT_Reference_Face(
      face,
    );
  }

  late final _FT_Reference_FacePtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_Face)>>(
          'FT_Reference_Face');
  late final _FT_Reference_Face =
      _FT_Reference_FacePtr.asFunction<int Function(FT_Face)>();

  /// @function:
  /// FT_Done_Face
  ///
  /// @description:
  /// Discard a given face object, as well as all of its child slots and
  /// sizes.
  ///
  /// @input:
  /// face ::
  /// A handle to a target face object.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// See the discussion of reference counters in the description of
  /// @FT_Reference_Face.
  int FT_Done_Face(
    FT_Face face,
  ) {
    return _FT_Done_Face(
      face,
    );
  }

  late final _FT_Done_FacePtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_Face)>>('FT_Done_Face');
  late final _FT_Done_Face =
      _FT_Done_FacePtr.asFunction<int Function(FT_Face)>();

  /// @function:
  /// FT_Select_Size
  ///
  /// @description:
  /// Select a bitmap strike.  To be more precise, this function sets the
  /// scaling factors of the active @FT_Size object in a face so that
  /// bitmaps from this particular strike are taken by @FT_Load_Glyph and
  /// friends.
  ///
  /// @inout:
  /// face ::
  /// A handle to a target face object.
  ///
  /// @input:
  /// strike_index ::
  /// The index of the bitmap strike in the `available_sizes` field of
  /// @FT_FaceRec structure.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// For bitmaps embedded in outline fonts it is common that only a subset
  /// of the available glyphs at a given ppem value is available.  FreeType
  /// silently uses outlines if there is no bitmap for a given glyph index.
  ///
  /// For GX and OpenType variation fonts, a bitmap strike makes sense only
  /// if the default instance is active (that is, no glyph variation takes
  /// place); otherwise, FreeType simply ignores bitmap strikes.  The same
  /// is true for all named instances that are different from the default
  /// instance.
  ///
  /// Don't use this function if you are using the FreeType cache API.
  int FT_Select_Size(
    FT_Face face,
    int strike_index,
  ) {
    return _FT_Select_Size(
      face,
      strike_index,
    );
  }

  late final _FT_Select_SizePtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_Face, FT_Int)>>(
          'FT_Select_Size');
  late final _FT_Select_Size =
      _FT_Select_SizePtr.asFunction<int Function(FT_Face, int)>();

  /// @function:
  /// FT_Request_Size
  ///
  /// @description:
  /// Resize the scale of the active @FT_Size object in a face.
  ///
  /// @inout:
  /// face ::
  /// A handle to a target face object.
  ///
  /// @input:
  /// req ::
  /// A pointer to a @FT_Size_RequestRec.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// Although drivers may select the bitmap strike matching the request,
  /// you should not rely on this if you intend to select a particular
  /// bitmap strike.  Use @FT_Select_Size instead in that case.
  ///
  /// The relation between the requested size and the resulting glyph size
  /// is dependent entirely on how the size is defined in the source face.
  /// The font designer chooses the final size of each glyph relative to
  /// this size.  For more information refer to
  /// 'https://www.freetype.org/freetype2/docs/glyphs/glyphs-2.html'.
  ///
  /// Contrary to @FT_Set_Char_Size, this function doesn't have special code
  /// to normalize zero-valued widths, heights, or resolutions, which are
  /// treated as @FT_LOAD_NO_SCALE.
  ///
  /// Don't use this function if you are using the FreeType cache API.
  int FT_Request_Size(
    FT_Face face,
    FT_Size_Request req,
  ) {
    return _FT_Request_Size(
      face,
      req,
    );
  }

  late final _FT_Request_SizePtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_Face, FT_Size_Request)>>(
          'FT_Request_Size');
  late final _FT_Request_Size =
      _FT_Request_SizePtr.asFunction<int Function(FT_Face, FT_Size_Request)>();

  /// @function:
  /// FT_Set_Char_Size
  ///
  /// @description:
  /// Call @FT_Request_Size to request the nominal size (in points).
  ///
  /// @inout:
  /// face ::
  /// A handle to a target face object.
  ///
  /// @input:
  /// char_width ::
  /// The nominal width, in 26.6 fractional points.
  ///
  /// char_height ::
  /// The nominal height, in 26.6 fractional points.
  ///
  /// horz_resolution ::
  /// The horizontal resolution in dpi.
  ///
  /// vert_resolution ::
  /// The vertical resolution in dpi.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// While this function allows fractional points as input values, the
  /// resulting ppem value for the given resolution is always rounded to the
  /// nearest integer.
  ///
  /// If either the character width or height is zero, it is set equal to
  /// the other value.
  ///
  /// If either the horizontal or vertical resolution is zero, it is set
  /// equal to the other value.
  ///
  /// A character width or height smaller than 1pt is set to 1pt; if both
  /// resolution values are zero, they are set to 72dpi.
  ///
  /// Don't use this function if you are using the FreeType cache API.
  int FT_Set_Char_Size(
    FT_Face face,
    int char_width,
    int char_height,
    int horz_resolution,
    int vert_resolution,
  ) {
    return _FT_Set_Char_Size(
      face,
      char_width,
      char_height,
      horz_resolution,
      vert_resolution,
    );
  }

  late final _FT_Set_Char_SizePtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Face, FT_F26Dot6, FT_F26Dot6, FT_UInt,
              FT_UInt)>>('FT_Set_Char_Size');
  late final _FT_Set_Char_Size = _FT_Set_Char_SizePtr.asFunction<
      int Function(FT_Face, int, int, int, int)>();

  /// @function:
  /// FT_Set_Pixel_Sizes
  ///
  /// @description:
  /// Call @FT_Request_Size to request the nominal size (in pixels).
  ///
  /// @inout:
  /// face ::
  /// A handle to the target face object.
  ///
  /// @input:
  /// pixel_width ::
  /// The nominal width, in pixels.
  ///
  /// pixel_height ::
  /// The nominal height, in pixels.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// You should not rely on the resulting glyphs matching or being
  /// constrained to this pixel size.  Refer to @FT_Request_Size to
  /// understand how requested sizes relate to actual sizes.
  ///
  /// Don't use this function if you are using the FreeType cache API.
  int FT_Set_Pixel_Sizes(
    FT_Face face,
    int pixel_width,
    int pixel_height,
  ) {
    return _FT_Set_Pixel_Sizes(
      face,
      pixel_width,
      pixel_height,
    );
  }

  late final _FT_Set_Pixel_SizesPtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_Face, FT_UInt, FT_UInt)>>(
          'FT_Set_Pixel_Sizes');
  late final _FT_Set_Pixel_Sizes =
      _FT_Set_Pixel_SizesPtr.asFunction<int Function(FT_Face, int, int)>();

  /// @function:
  /// FT_Load_Glyph
  ///
  /// @description:
  /// Load a glyph into the glyph slot of a face object.
  ///
  /// @inout:
  /// face ::
  /// A handle to the target face object where the glyph is loaded.
  ///
  /// @input:
  /// glyph_index ::
  /// The index of the glyph in the font file.  For CID-keyed fonts
  /// (either in PS or in CFF format) this argument specifies the CID
  /// value.
  ///
  /// load_flags ::
  /// A flag indicating what to load for this glyph.  The @FT_LOAD_XXX
  /// flags can be used to control the glyph loading process (e.g.,
  /// whether the outline should be scaled, whether to load bitmaps or
  /// not, whether to hint the outline, etc).
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// For proper scaling and hinting, the active @FT_Size object owned by
  /// the face has to be meaningfully initialized by calling
  /// @FT_Set_Char_Size before this function, for example.  The loaded
  /// glyph may be transformed.  See @FT_Set_Transform for the details.
  ///
  /// For subsetted CID-keyed fonts, `FT_Err_Invalid_Argument` is returned
  /// for invalid CID values (that is, for CID values that don't have a
  /// corresponding glyph in the font).  See the discussion of the
  /// @FT_FACE_FLAG_CID_KEYED flag for more details.
  ///
  /// If you receive `FT_Err_Glyph_Too_Big`, try getting the glyph outline
  /// at EM size, then scale it manually and fill it as a graphics
  /// operation.
  int FT_Load_Glyph(
    FT_Face face,
    int glyph_index,
    int load_flags,
  ) {
    return _FT_Load_Glyph(
      face,
      glyph_index,
      load_flags,
    );
  }

  late final _FT_Load_GlyphPtr = _lookup<
          ffi.NativeFunction<FT_Error Function(FT_Face, FT_UInt, FT_Int32)>>(
      'FT_Load_Glyph');
  late final _FT_Load_Glyph =
      _FT_Load_GlyphPtr.asFunction<int Function(FT_Face, int, int)>();
